--- a/axelor-wkf/src/main/resources/views/Workflow.xml
+++ b/axelor-wkf/src/main/resources/views/Workflow.xml
@@ -33,6 +33,8 @@
         <field name="metaModel"/>
 		<field name="maxNodeCounter"/>
 		<field name="node" />
+	    <field name="sequence" />
+	    <field name="condition" />
         <field name="active" readonlyIf="archived" />
         <field name="archived" onChange="wkf-record-archived" />
         <group colSpan="4" cols="4">
