--- a/axelor-meta/src/main/resources/views/Menu.xml
+++ b/axelor-meta/src/main/resources/views/Menu.xml
@@ -6,7 +6,17 @@
   <menuitem name="menu-admin" title="Administration" priority="-100" groups="admins" icon="img/wrench.png"/>
   <menuitem name="menu-model" title="Model Management" parent="menu-admin"/>
   <menuitem name="menu-view-management" title="View Management" parent="menu-admin"/>
+  <menuitem name="menu-module-management" title="Module Management" parent="menu-admin" />
 
+  <menuitem name="menu-meta-module" parent="menu-module-management"
+    title="All Modules"
+    action="meta.modules"/>
+    
+  <action-view name="meta.modules" title="Modules" model="com.axelor.meta.db.MetaModule">
+    <view type="grid" name="meta-module-grid"/>
+    <view type="form" name="meta-module-form"/>
+  </action-view>
+  
   <menuitem name="menu-meta-model" parent="menu-model"
     title="All Models"
     action="action-meta-model-views"/>
