--- a/axelor-meta/src/main/resources/views/Views.xml
+++ b/axelor-meta/src/main/resources/views/Views.xml
@@ -34,33 +34,23 @@
     <field name="removable" width="100"/>
   </grid>
 
-  <form name="meta-module-form" title="Module" model="com.axelor.meta.db.MetaModule">
-    <field name="name" />
-    <field name="moduleVersion" />
-    <field name="title" />
-    <field name="installed" />
-    <notebook colSpan="4">
-      <page title="Description" cols="1">
-        <field name="description" widget="Text" />
-      </page>
-      <page title="Dependencies" cols="1">
-        <field name="dependencies">
-          <grid title="Dependencies" editable="true">
-            <field name="name" />
-          </grid>
-          <form title="Dependency">
-            <field name="name" />
-          </form>
-        </field>
-      </page>
-    </notebook>
-    <group colSpan="4" cols="2" colWidths="*,150">
-      <spacer />
-      <group cols="1">
-        <button name="btnInstall" title="Install" showIf="!installed" onClick="com.axelor.meta.web.ModuleController:install(name)"/>
-        <button name="btnUninstall" title="Uninstall" showIf="install &amp;&amp;removable" />
-      </group>
+  <form name="meta-module-form" title="Module" cols="4" colWidths="100,10,200,*"
+    model="com.axelor.meta.db.MetaModule">
+    <separator title="Module" colSpan="4" />
+    <field name="title" colSpan="4" />
+    <field name="name" colSpan="4" />
+    <field name="moduleVersion" colSpan="4" />
+    <field name="depends" widget="Tags" colSpan="4" />
+    <field name="installed" readonly="true"/>
+    <group cols="1">
+      <button name="btnInstall" title="Install" showIf="!installed"
+        onClick="com.axelor.meta.web.ModuleController:install(name)" />
+      <button name="btnUninstall" title="Uninstall" showIf="installed &amp;&amp; removable"
+        onClick="com.axelor.meta.web.ModuleController:uninstall(name)" />
     </group>
+    <spacer />
+    <separator title="Details" colSpan="4" />
+    <field name="description" colSpan="4" noLabel="true" />
   </form>
 
   <grid title="All Views" name="meta-view-grid" model="com.axelor.meta.db.MetaView" orderBy="priority,name">
