Implemented Html widget (using TinyMCE).

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -702,3 +702,11 @@ table.field-details .help-text hr {
 .multi-object-select td.select-item {
 	padding-right: 4px !important;
 }
+
+.form-item-container > .mce-tinymce {
+	box-sizing: content-box !important;
+}
+
+.form-item-container > .html-display-text {
+	padding-top: 4px;	
+}
