Implemented `trail` view.
The trail view is a list for form views. It displayes each record one by one
using a form view.

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -612,6 +612,10 @@ table.field-details .help-text hr {
 	transition: border linear .2s, box-shadow linear .2s;
 }
 
+.tag-select.picker-input {
+	background-color: #fff;
+}
+
 .readonly .tag-select {
 	border: none;
 	box-shadow: none;
