--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -178,3 +178,18 @@
 .slick-cell.boolean {
 	text-align: center;
 }
+
+.slick-headerrow input::-webkit-input-placeholder {
+	font-size: 11px;
+	font-style:italic
+}
+
+.slick-headerrow input::-moz-placeholder {
+	font-size: 11px;
+	font-style:italic
+}
+
+.slick-headerrow input::-ms-input-placeholder {
+	font-size: 11px;
+	font-style:italic
+}
