--- a/axelor-web/src/main/webapp/css/splitter.css
+++ b/axelor-web/src/main/webapp/css/splitter.css
@@ -44,6 +44,7 @@
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
 	overflow: auto;
+	background-color: #F5F5F5;
 }
 
 .splitter-footer {
