--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -98,7 +98,7 @@ table.form-layout td.form-item.v-align-top {
 
 .form-item-container.readonly > a {
 	line-height: 20px;
-	color: #0088cc;
+	color: #53881f;
 }
 
 .form-item-container > input.display-text {
