Implemented support for navigator view param.
The navigator view param can be used to hide/collapse the
navigation menu when home action view is loaded.

--- a/axelor-web/src/main/webapp/partials/main.html
+++ b/axelor-web/src/main/webapp/partials/main.html
@@ -1,5 +1,5 @@
  <div ng-controller="NavCtrl">
-  <div ui-splitter x-orientation="vertical" x-position="250">
+  <div ui-splitter nav-menu-toggle x-orientation="vertical" x-position="250">
     <div class="sidebar">
        <div class="splitter-header">
          <div class="splitter-title" x-translate>Navigation</div>
