Reverting to the default theme.
The deafult theme should not be changed. A new theme must be
created and the login page should be overriden in application
module not the one in axelor-web module.

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -98,7 +98,7 @@ table.form-layout td.form-item.v-align-top {
 
 .form-item-container.readonly > a {
 	line-height: 20px;
-	color: #53881f;
+	color: #0088cc;
 }
 
 .form-item-container > input.display-text {
